// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubNav.Link renders consistently 1`] = `
.c0 {
  padding-left: 16px;
  padding-right: 16px;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  min-height: 34px;
  color: #24292e;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-top: 1px solid #e1e4e8;
  border-bottom: 1px solid #e1e4e8;
  border-right: 1px solid #e1e4e8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:first-of-type {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  border-left: 1px solid #e1e4e8;
}

.c0:last-of-type {
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f6f8fa;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover .SubNav-octicon,
.c0:focus .SubNav-octicon {
  color: #6a737d;
}

.c0.selected {
  color: #fff;
  background-color: #0366d6;
  border: 0;
}

.c0.selected .SubNav-octicon {
  color: #6a737d;
}

<a
  className="c0 SubNav-item"
/>
`;

exports[`SubNav.Link respects the "selected" prop 1`] = `
.c0 {
  padding-left: 16px;
  padding-right: 16px;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  min-height: 34px;
  color: #24292e;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-top: 1px solid #e1e4e8;
  border-bottom: 1px solid #e1e4e8;
  border-right: 1px solid #e1e4e8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:first-of-type {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  border-left: 1px solid #e1e4e8;
}

.c0:last-of-type {
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f6f8fa;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover .SubNav-octicon,
.c0:focus .SubNav-octicon {
  color: #6a737d;
}

.c0.selected {
  color: #fff;
  background-color: #0366d6;
  border: 0;
}

.c0.selected .SubNav-octicon {
  color: #6a737d;
}

<a
  className="c0 SubNav-item selected"
  selected={true}
/>
`;
